--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,140 @@
   <body>
     <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application" method="post">
+
+      <fieldset class="fieldset">
+        <legend>Personal information</legend>
+        <div class="inputs">
+          <label for="surname">Surname:</label>
+          <input
+          type="text"
+          name="surname"
+          id="surname"
+          required
+          autocomplete="off"
+          >
+        </div>
+
+        <div class="inputs">
+          <label for="name">Name:</label>
+          <input
+          type="text"
+          name="name"
+          id="name"
+          required
+          autocomplete="off"
+          >
+        </div>
+
+        <div class="inputs">
+          <label for="age">How old are You?</label>
+          <input
+          type="number"
+          name="age"
+          id="age"
+          min="1"
+          max="100"
+          value="12"
+          >
+        </div>
+
+        <div class="inputs">
+          <label for="birth-date">Full date of birth:</label>
+          <input type="date" name="birth-date" id="birth-date">
+        </div>
+
+        <div class="inputs">
+          <label for="checkbox">I accept the term of the agreement</label>
+          <input type="checkbox" name="checkbox" id="checkbox">
+        </div>
+      </fieldset>
+
+      <fieldset class="fieldset">
+        <legend>Registration</legend>
+        <div class="inputs">
+          <label for="e-mail">E-mail:</label>
+          <input
+          type="email"
+          name="e-mail"
+          id="e-mail"
+          placeholder="e-mail@example.com"
+          >
+        </div>
+
+        <div class="inputs">
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password">
+        </div>
+      </fieldset>
+
+      <fieldset class="fieldset">
+        <legend>An interesting fact about you!</legend>
+        <div class="inputs">
+          <label>Do you love cats?</label>
+          <label for="love-cats-yes">
+            <input
+              type="radio"
+              name="love-cats"
+              value="y"
+              id="love-cats-yes"> Yes
+          </label>
+
+          <label for="love-cats-no">
+            <input
+            type="radio"
+            name="love-cats"
+            value="n"
+            id="love-cats-no"> No
+          </label>
+        </div>
+
+        <div class="inputs">
+          <label for="color"> What is your favorite color?
+            <input type="color" name="color" id="color">
+          </label>
+        </div>
+
+        <div class="inputs">
+          <label for="bed-time"> What is your favorite color?
+            <input type="time" name="bed-time" id="bed-time">
+          </label>
+        </div>
+
+        <div class="inputs">
+          <label for="car">What are you favorite brand of cars</label>
+          <select name="car" id="car" multiple>
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="lada">Lada</option>
+          </select>
+        </div>
+
+        <div class="inputs">
+          <label for="range">How do you rate our work?
+            <input type="range" name="range" id="range">
+          </label>
+        </div>
+      </fieldset>
+
+      <fieldset class="fieldset">
+        <legend>Additional information</legend>
+        <div class="inputs">
+          <label for="feedback"> Add your feedback</label>
+          <textarea name="feedback" id="feedback"></textarea>
+        </div>
+
+        <div class="inputs">
+          <label for="y-n">Would you recommend us?</label>
+          <select name="y-n" id="y-n">
+            <option value="yes">yes</option>
+            <option value="no">no</option>
+          </select>
+        </div>
+      </fieldset>
+
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
